// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<span
  className="sc-bhpuBD dsvMCK"
>
  Caption
</span>
`;

exports[`Caption renders colors 1`] = `
Array [
  <span
    className="sc-bhpuBD dsvMCK"
  >
    Default color is Bulma
  </span>,
  <span
    className="sc-bhpuBD gLQgnT"
    color="piccolo.100"
  >
    Piccolo
  </span>,
  <span
    className="sc-bhpuBD fqFmGF"
    color="trunks.100"
  >
    Trunks
  </span>,
  <span
    className="sc-bhpuBD tjFun"
    color="krillin.100"
  >
    Krillin
  </span>,
]
`;

exports[`Caption renders font weights 1`] = `
Array [
  <span
    className="sc-bhpuBD dsvMCK"
  >
    Default font-weight is bold
  </span>,
  <span
    className="sc-bhpuBD fAtJzr"
  >
    Font-weight is regular
  </span>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <span
    className="sc-bhpuBD dsvMCK"
  >
    Span is a default tag
  </span>,
  <p
    className="sc-bhpuBD dsvMCK"
  >
    Paragraph tag
  </p>,
  <label
    className="sc-bhpuBD dsvMCK"
  >
    Label tag
  </label>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <span
    className="sc-bhpuBD dsvMCK"
  >
    Default font-size is 10px
  </span>,
  <span
    className="sc-bhpuBD eKHSTX"
    size={9}
  >
    Size is 9px
  </span>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <span
    className="sc-bhpuBD dsvMCK"
  >
    Text-align is not specified
  </span>,
  <span
    className="sc-bhpuBD kcEpRx"
  >
    Centered text
  </span>,
  <span
    className="sc-bhpuBD bmZoJm"
  >
    Right alignment
  </span>,
]
`;
